--- a/index.html
+++ b/index.html
@@ -29,45 +29,51 @@
     <script src="https://ce.lennertderyck.be/library/elements.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://unpkg.com/feather-icons"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
     
     <!-- local assets -->
     <link rel="stylesheet" href="./static/css/main.min.css">
+    <script src="./static/js/taffy.js"></script>
+    <script src="./static/js/cookies.js"></script>
 </head>
 <body class="my-5">
     <header class="mb-5">
         <section class="container">
-            <h2 class="text-center font-scnd fontw-400 mb-0">Dan Harris</h2>
+            <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
             <h4 class="text-center">create payment request</h4>
         </section>
     </header>
     <main>
-        <section data-section="payment-details" class="container mb-5">
-                <div class="row mb-3">
-                    <div class="col-6">
-                        <label for="inputRequestAmount">i want to request</label>
-                        <input type="email" class="form-control" id="inputRequestAmount" placeholder="amount">
-                    </div>
-                    <div class="col-6">
-                        <label for="inputRequestContact">from</label>
-                        <input type="email" class="form-control" id="inputRequestContact" placeholder="person">
-                    </div> 
+        <section data-section="payment-details" class="container xsm mb-5">
+            <div class="row mb-3">
+                <div class="col-6">
+                    <label for="inputRequestAmount">i want to request</label>
+                    <input type="number" class="form-control" id="inputRequestAmount" placeholder="amount">
                 </div>
-                <div class="row mb-3">
-                    <div class="col">
-                        <label for="inputRequestDescr">because of</label>
-                        <input type="email" class="form-control" id="inputRequestDescr" placeholder="description bank statement">
-                    </div>
+                <div class="col-6">
+                    <label for="inputRequestContact">from</label>
+                    <input type="text" class="form-control" id="inputRequestContact" placeholder="person">
+                </div> 
+            </div>
+            <div class="row mb-3">
+                <div class="col">
+                    <label for="inputRequestDescr">because of</label>
+                    <input type="text" class="form-control" id="inputRequestDescr" placeholder="description bank statement">
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <label for="inputRequestAccount">and recieve it on</label>
-                        <input type="email" class="form-control" id="inputRequestAccount" placeholder="account number">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="inputRequestAccount">and recieve it on</label>
+                    <input type="text" class="form-control" id="inputRequestAccount" placeholder="account number">
                 </div>
+            </div>
         </section>
         <section class="container">
             <div class="d-flex justify-content-center">
-                <button class="btn">
+                <button class="btn btn-effect mr-4" data-label="generate-code" data-sesam-trigger="generatedQRCode">
+                    <i data-feather="zap"></i>generate
+                </button>
+                <button class="btn btn-effect" data-sesam-trigger="settings">
                     <i data-feather="settings"></i>settings
                 </button>
             </div>
@@ -77,14 +83,161 @@
         <small class="d-block text-center credits-ldr">a project by <a href="https://www.instagram.com/lennertderyck/" target="_blank" rel="noopener">@lennertderyck</a></small>
     </footer>
 
+    <!-- modal generated code -->
+    <div class="sesam-modal animated faster d-flex align-items-center justify-content-center" data-sesam-target="generatedQRCode">
+        <div class="container maxw-fit p-5 bd-radius bg-color-white position-relative">
+            <div class="d-flex d-md-block flex-row align-items-center">
+                <div class="row d-flex align-items-center mb-4">
+                    <div class="col-auto mr-4">
+                        <img data-label="qrCode" src="" alt="" width="200" height="200">
+                    </div>
+                    <div class="col">
+                        <div data-label="payment-details-preview">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="mb-n1">reciever</p>
+                                    <h3 class="font-scnd fontw-400 uppc" data-label="reciever">Dan Harris</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p class="mb-n1">account number</p>
+                                    <h3 class="font-scnd fontw-400" data-label="account">BE05734047216575</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-auto">
+                                    <p class="mb-n1">amount</p>
+                                    <h3 class="font-scnd fontw-400 mb-0" data-label="amount">€34</h3>
+                                </div>
+                                <div class="col">
+                                    <p class="mb-n1">bank description</p>
+                                    <h3 class="font-scnd fontw-400 mb-0" data-label="descr">Tickets</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <label for="generatedApiURL">or share this url</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="generatedApiURL" readonly>
+                        <div class="input-group-append">
+                            <button class="btn btn-effect" data-label="copy-api-url">
+                                <i data-feather="copy"></i>copy url
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-close" data-sesam-trigger="generatedQRCode"><i data-feather="x"></i></button>
+
+            <!-- share -->
+            <!-- https://www.facebook.com/dialog/send?app_id=338384323354451&link=https%3A%2F%2Fstackoverflow.com&redirect_uri=https%3A%2F%2Fstackoverflow.com -->
+            <!-- https://github.com/w3c/web-share -->
+        </div>
+    </div>
+
+    <!-- modal user settings -->
+    <div class="sesam-modal animated faster d-flex align-items-center justify-content-center" data-sesam-target="settings">
+        <div class="container xsm p-5 bd-radius bg-color-white position-relative">
+            <div class="row mb-3">
+                <div class="col">
+                    <label for="inputSettingsName">your name</label>
+                    <input type="text" class="form-control" id="inputSettingsName" placeholder="name">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="inputSettingsAccount">your account number</label>
+                    <input type="text" class="form-control" id="inputSettingsAccount" placeholder="BE...">
+                </div> 
+            </div>
+            <button class="btn btn-close" data-sesam-trigger="settings"><i data-feather="x"></i></button>
+            <div class="d-flex justify-content-center mt-5">
+                <button class="btn btn-effect" data-label="save-settings" data-sesam-trigger="settings">
+                    <i data-feather="save"></i>save
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- <button class="btn" data-sesam-trigger="payment">tonen</button> -->
+
+    <!-- modal api pay -->
+    <div class="sesam-modal animated faster d-flex align-items-center justify-content-center" data-label="payment-screen">
+        <div class="w-100 p-5 bd-radius bg-color-white position-relative">
+            <a class="btn btn-close" href="/"><i data-feather="x"></i></a>
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="row mb-5">
+                    <div class="col">
+                        <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
+                        <h4 class="text-center">sended you a payment request</h4>
+                    </div>
+                </div>
+                <div class="row d-flex align-items-center mb-5">
+                    <div class="col-auto mr-4">
+                        <img data-label="qrCode" src="" alt="" style="width: 200px; height: 200px" width="200" height="200">
+                    </div>
+                    <div class="col">
+                        <div data-label="payment-details-preview">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="mb-n1">reciever</p>
+                                    <h3 class="font-scnd fontw-400 uppc" data-label="reciever">Dan Harris</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p class="mb-n1">account number</p>
+                                    <h3 class="font-scnd fontw-400" data-label="account">BE05734047216575</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-auto">
+                                    <p class="mb-n1">amount</p>
+                                    <h3 class="font-scnd fontw-400 mb-0" data-label="amount">€34</h3>
+                                </div>
+                                <div class="col">
+                                    <p class="mb-n1">bank description</p>
+                                    <h3 class="font-scnd fontw-400 mb-0" data-label="descr">Tickets</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="text-center">use your banking app</p>
+                        <div class="d-flex align-items-center">
+                            <img src="./static/images/logo_kbc.svg" class="mr-3" height="25px" alt="logo kbc">
+                            <img src="./static/images/logo_argenta.svg" class="mr-3" height="25px" alt="logo argenta">
+                            <img src="./static/images/logo_belfius.svg" class="mr-3" height="17px" alt="logo belfius">
+                            <img src="./static/images/logo_bnp_paribas.svg" class="mr-3" height="25px" alt="logo bnp paribas">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-none justify-content-center mt-5">
+                <button class="btn btn-effect" data-label="save-settings" data-sesam-trigger="settings">
+                    <i data-feather="save"></i>save
+                </button>
+            </div>
+        </div>
+    </div>
+
+    
     <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="./static/js/main.js"></script>
     <script src="./static/js/collapse.js"></script>
-
     <script>
+        // devider
+        console.log(' ');
+
+        // functions
         feather.replace()
     </script>
 </body>
