--- a/index.html
+++ b/index.html
@@ -86,31 +86,31 @@
     <!-- modal generated code -->
     <div class="sesam-modal animated faster d-flex align-items-center justify-content-center" data-sesam-target="generatedQRCode">
         <div class="container maxw-fit p-5 bd-radius bg-color-white position-relative">
-            <div class="d-flex d-md-block flex-row align-items-center">
+            <div class="d-block flex-row align-items-center">
                 <div class="row d-flex align-items-center mb-4">
-                    <div class="col-auto mr-4">
+                    <div class="col-12 col-md-auto mr-md-4 d-flex justify-content-center mb-4 mb-md-0">
                         <img data-label="qrCode" src="" alt="" width="200" height="200">
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-md">
                         <div data-label="payment-details-preview">
                             <div class="row">
                                 <div class="col">
-                                    <p class="mb-n1">reciever</p>
-                                    <h3 class="font-scnd fontw-400 uppc" data-label="reciever">Dan Harris</h3>
+                                    <p class="mb-n1 text-center text-md-left">reciever</p>
+                                    <h3 class="font-scnd fontw-400 uppc text-center text-md-left" data-label="reciever">Dan Harris</h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <p class="mb-n1">account number</p>
-                                    <h3 class="font-scnd fontw-400" data-label="account">BE05734047216575</h3>
+                                    <p class="mb-n1 text-center text-md-left">account number</p>
+                                    <h3 class="font-scnd fontw-400 text-center text-md-left" data-label="account">BE05734047216575</h3>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row d-flex justify-content-center justify-content-md-start">
                                 <div class="col-auto">
                                     <p class="mb-n1">amount</p>
                                     <h3 class="font-scnd fontw-400 mb-0" data-label="amount">€34</h3>
                                 </div>
-                                <div class="col">
+                                <div class="col-auto">
                                     <p class="mb-n1">bank description</p>
                                     <h3 class="font-scnd fontw-400 mb-0" data-label="descr">Tickets</h3>
                                 </div>
@@ -172,33 +172,33 @@
                 <div class="row mb-5">
                     <div class="col">
                         <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
-                        <h4 class="text-center">sended you a payment request</h4>
+                        <h4 class="text-center">send you a payment request</h4>
                     </div>
                 </div>
                 <div class="row d-flex align-items-center mb-5">
-                    <div class="col-auto mr-4">
-                        <img data-label="qrCode" src="" alt="" style="width: 200px; height: 200px" width="200" height="200">
+                    <div class="col-12 col-md-auto mb-4 mb-md-0 mr-md-4 d-flex justify-content-center">
+                        <img data-label="qrCode" class="" src="" alt="" style="width: 200px; height: 200px" width="200" height="200">
                     </div>
                     <div class="col">
                         <div data-label="payment-details-preview">
                             <div class="row">
                                 <div class="col">
-                                    <p class="mb-n1">reciever</p>
-                                    <h3 class="font-scnd fontw-400 uppc" data-label="reciever">Dan Harris</h3>
+                                    <p class="mb-n1 text-center text-md-left">reciever</p>
+                                    <h3 class="font-scnd fontw-400 uppc text-center text-md-left" data-label="reciever">Dan Harris</h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <p class="mb-n1">account number</p>
-                                    <h3 class="font-scnd fontw-400" data-label="account">BE05734047216575</h3>
+                                    <p class="mb-n1 text-center text-md-left">account number</p>
+                                    <h3 class="font-scnd fontw-400 text-center text-md-left" data-label="account">BE05734047216575</h3>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row d-flex justify-content-center justify-content-md-start">
                                 <div class="col-auto">
                                     <p class="mb-n1">amount</p>
                                     <h3 class="font-scnd fontw-400 mb-0" data-label="amount">€34</h3>
                                 </div>
-                                <div class="col">
+                                <div class="col-auto">
                                     <p class="mb-n1">bank description</p>
                                     <h3 class="font-scnd fontw-400 mb-0" data-label="descr">Tickets</h3>
                                 </div>
@@ -218,10 +218,10 @@
                     </div>
                 </div>
             </div>
-            <div class="d-none justify-content-center mt-5">
-                <button class="btn btn-effect" data-label="save-settings" data-sesam-trigger="settings">
-                    <i data-feather="save"></i>save
-                </button>
+            <div class="d-flex justify-content-center mt-5">
+                <a class="btn btn-effect" href="/">
+                    <i data-feather="zap"></i>generate your own
+                </a>
             </div>
         </div>
     </div>
