--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row mb-3">
                 <div class="col-6">
                     <label for="inputRequestAmount">i want to request</label>
-                    <input type="number" class="form-control" id="inputRequestAmount" placeholder="amount">
+                    <input type="number" min="0" class="form-control" id="inputRequestAmount" placeholder="amount">
                 </div>
                 <div class="col-6">
                     <label for="inputRequestContact">from</label>
@@ -89,7 +89,7 @@
             <div class="d-block flex-row align-items-center">
                 <div class="row d-flex align-items-center mb-4">
                     <div class="col-12 col-md-auto mr-md-4 d-flex justify-content-center mb-4 mb-md-0">
-                        <img data-label="qrCode" src="" alt="" width="200" height="200">
+                        <img data-label="qrCode" src="" alt="" width="160" height="160">
                     </div>
                     <div class="col-12 col-md">
                         <div data-label="payment-details-preview">
@@ -177,7 +177,7 @@
                 </div>
                 <div class="row d-flex align-items-center mb-5">
                     <div class="col-12 col-md-auto mb-4 mb-md-0 mr-md-4 d-flex justify-content-center">
-                        <img data-label="qrCode" class="" src="" alt="" style="width: 200px; height: 200px" width="200" height="200">
+                        <img data-label="qrCode" class="" src="" alt="" style="width: 160px; height: 160px" width="160" height="160">
                     </div>
                     <div class="col">
                         <div data-label="payment-details-preview">
