--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- <meta property="og:image" content=""/> -->
     
     <!-- integrations -->
-    <script src="https://ce.lennertderyck.be/library/elements.js"></script>
+    <script src="https://ce.lennertderyck.be/library/elements.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://unpkg.com/feather-icons"></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
