Updated history list

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
                 </button>
             </div>
         </section>
-        <section data-section="generated-list">
+        <section data-section="generated-list" class="container xsm">
             <h3 class="text-center font-scnd mb-3">history</h3>
-            <div class="container xsm">
-                <div data-label="record-list"></div>
+            <div data-label="record-list">
+                <p class="text-center font-scnd">
+                    Make your first payment request and it will show up here
+                </p>
             </div>
         </section>
     </main>
