--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h3 class="text-center font-scnd mb-3">history</h3>
             <div data-label="record-list">
                 <p class="text-center font-scnd">
-                    Make your first payment request and it will show up here
+                    Make a payment request and it will show up here
                 </p>
             </div>
         </section>
