--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <p class="text-center font-scnd fontw-700">account number copied, paste when needed</p>
+                        <p class="text-center font-scnd fontw-700 mb-5">account number copied, paste when needed</p>
                         <p class="text-center">use your banking app</p>
                         <div class="d-flex align-items-center">
                             <img src="./static/images/logo_kbc.svg" class="mr-3" height="25px" alt="logo kbc">
