--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
         </section>
         <section data-section="generated-list" class="container xsm">
             <h3 class="text-center font-scnd mb-3">history</h3>
-            <div data-label="record-list">
+            <div data-label="record-list" class="container">
                 <p class="text-center font-scnd">
                     Make a payment request and it will show up here
                 </p>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-effect btn-warning mt-4" data-label="delete-payment-history">
+                    <i data-feather="x"></i>delete history
+                </button>
             </div>
         </section>
     </main>
@@ -97,7 +102,7 @@
             <div class="d-block flex-row align-items-center">
                 <div class="row d-flex align-items-center mb-4">
                     <div class="col-12 col-md-auto mr-md-4 d-flex justify-content-center mb-4 mb-md-0">
-                        <img data-label="qrCode" src="" alt="" width="160" height="160">
+                        <div data-label="qrCode"></div>
                     </div>
                     <div class="col-12 col-md">
                         <div data-label="payment-details-preview">
