--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
             <div class="d-block flex-row align-items-center">
                 <div class="row d-flex align-items-center mb-4">
                     <div class="col-12 col-md-auto mr-md-4 d-flex justify-content-center mb-4 mb-md-0">
-                        <div data-label="qrCode"></div>
+                        <div data-label="qrCode">
+                            <div>
+                                <i data-feather="frown"></i>
+                                <p>qr code couldn’t be generated, try again later</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md">
                         <div data-label="payment-details-preview">
