--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="./static/js/cookies.js"></script>
 </head>
 <body class="my-5">
+    <div id="toastContainer" aria-live="polite" aria-atomic="true"></div>
     <header class="mb-5">
         <section class="container">
             <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
@@ -80,16 +81,16 @@
         </section>
         <section data-section="generated-list" class="container xsm">
             <h3 class="text-center font-scnd mb-3">history</h3>
-            <div data-label="record-list" class="container">
-                <p class="text-center font-scnd">
-                    Make a payment request and it will show up here
-                </p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button class="btn btn-effect btn-warning mt-4" data-label="delete-payment-history">
-                    <i data-feather="x"></i>delete history
-                </button>
-            </div>
+                <div data-label="record-list" class="container sesam-collapse">
+                    <p class="text-center font-scnd">
+                        Make a payment request and it will show up here
+                    </p>
+                </div>
+                <div class="d-flex justify-content-center mt-4">
+                    <button class="btn btn-effect btn-warning" data-label="delete-payment-history">
+                        <i data-feather="x"></i>delete history
+                    </button>
+                </div>
         </section>
     </main>
     <footer class="container mt-5">
@@ -102,12 +103,7 @@
             <div class="d-block flex-row align-items-center">
                 <div class="row d-flex align-items-center mb-4">
                     <div class="col-12 col-md-auto mr-md-4 d-flex justify-content-center mb-4 mb-md-0">
-                        <div data-label="qrCode">
-                            <div>
-                                <i data-feather="frown"></i>
-                                <p>qr code couldn’t be generated, try again later</p>
-                            </div>
-                        </div>
+                        <div data-label="qrCode"></div>
                     </div>
                     <div class="col-12 col-md">
                         <div data-label="payment-details-preview">
@@ -189,13 +185,18 @@
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <div class="row mb-5">
                     <div class="col">
-                        <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
-                        <h4 class="text-center">send you a payment request</h4>
+                            <h2 class="text-center font-scnd fontw-400 mb-0" data-label="header-name">Dan Harris</h2>
+                            <h4 class="text-center">send you a payment request</h4>
                     </div>
                 </div>
                 <div class="row d-flex align-items-center mb-5">
                     <div class="col-12 col-md-auto mb-4 mb-md-0 mr-md-4 d-flex justify-content-center">
-                        <img data-label="qrCode" class="" src="" alt="" style="width: 160px; height: 160px" width="160" height="160">
+                        <div data-label="qrCode" class="bg-color-main text-center bd-radius p-3 d-flex flex-column align-items-center justify-content-center no-select">
+                            <div class="mb-2">
+                                <i data-feather="frown"></i><br>
+                            </div>
+                            <p class="small mb-0">qr code couldn’t be generated, try again later</p>
+                        </div>
                     </div>
                     <div class="col">
                         <div data-label="payment-details-preview">
